# kiosque

./: .gitignore  404.html  ARCHITECTURE.md  CONTRIBUTING.md  TROUBLESHOOTING.md  agents.md  index.html  kiosque.code-workspace  mkdocs.yml  pyproject.toml  read_article.sh  readme.md  sitemap.xml  websites.md
.github/workflows/: ci.yml  docs.yml  release.yml
development/architecture/: index.html
development/contributing/: index.html
development/roadmap/: index.html
docs/: index.md  troubleshooting.md
docs/development/: architecture.md  contributing.md  roadmap.md
docs/features/: article-extraction.md  bookmark-management.md  tui-guide.md
docs/getting-started/: configuration.md  installation.md
docs/integrations/: github.md  raindrop.md
docs/websites/: adding-sites.md  authentication.md  nyt-cookie-setup.md  supported-sites.md
features/article-extraction/: index.html
features/bookmark-management/: index.html
features/tui-guide/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
integrations/github/: index.html
integrations/raindrop/: index.html
kiosque/: __init__.py  __main__.py  courrierinternational.py  download.py  lemonde.py  mondediplomatique.py  pourlascience.py
kiosque/api/: github.py  pocket.py  raindrop.py
kiosque/core/: client.py  config.py  download.py  session.py  website.py
kiosque/tui/: github.py  kiosque.css  kiosque.tcss  raindrop.py  tui.py
kiosque/website/: 01net.py  asahi.py  aviationweek.py  courrierinternational.py  franceculture.py  francetvinfo.py  ft.py  ladepeche.py  latimes.py  lefigaro.py  lemonde.py  lesechos.py  letemps.py  mediapart.py  mondediplomatique.py  nationalgeographic.py  nbcnews.py  newyorker.py  nikkei.py  nytimes.py  policito.py  pourlascience.py  quantamagazine.py  reporterre.py  rugbyrama.py  telerama.py  theatlantic.py  theconversation.py  theguardian.py  usinenouvelle.py  washingtonpost.py  yomiuri.py
search/: search_index.json
tests/: __init__.py  test_config.py  test_login.py  test_proxy.py  test_raindrop.py  test_website.py
troubleshooting/: index.html
websites/adding-sites/: index.html
websites/authentication/: index.html
websites/nyt-cookie-setup/: index.html
websites/supported-sites/: index.html
