[tool.poetry]
name = "kiosque"
version = "0.1.0"
description = "Save newspaper articles in textual format"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
readme = "readme.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]

[tool.poetry.scripts]
kiosque = 'kiosque:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = "^0.26.0"
bs4 = ">=0.0.1"
lxml = ">=4.6.3"
appdirs = ">=1.4.4"
pypandoc = ">=1.6.3"
click = ">=8.0.1"
pandas = ">=1.3.1"  # TODO remove
pyperclip = ">=1.8.2"
textual = ">=0.9"

[tool.poetry.group.dev.dependencies]
typing-extensions = ">=3.10.0"
mypy = ">=0.910"
ruff = "^0.1.9"
ipykernel = ">=6.13.0"
textual-dev = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]
line-length = 80
target-version = "py39"

[tool.mypy]
python_version = 3.9
platform = "posix"

check_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
