[project]
name = "kiosque"
version = "0.1.0"
description = "Save newspaper articles in textual format"
authors = [{ name = "Xavier Olive", email = "git@xoolive.org" }]
requires-python = ">=3.12"
license = "MIT"
readme = "readme.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "appdirs>=1.4.4",
  "bs4>=0.0.2",
  "click>=8.1.7",
  "httpx>=0.27.2",
  "lxml>=5.3.0",
  "pandas>=2.2.3",
  "pydantic>=2.11.5",
  "pypandoc>=1.13",
  "pyperclip>=1.9.0",
  "stamina>=24.3.0",
  "textual>=0.81.0",
]

[project.scripts]
kiosque = 'kiosque:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.8",
  "textual-dev>=1.6.1",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF",
]

[tool.mypy]
python_version = "3.12"
platform = "posix"

check_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
